--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -2,20 +2,32 @@
   <main class="main">
     <article class="container">
       <article class="orderContainerAdmin">
-        <h1>Admin översikt!</h1>
-        <br /><br />
-        <h2>orders:</h2>
-        <ul>
-          <li *ngFor="let orders of orderOverview;let i =index">
-           id: {{orders.id}}
-           kund: {{orders.createdBy}}
-           betalsätt: {{orders.paymentMethod}}
-           summan: {{orders.totalPrice}}
-           <button (click)="removeOrder(orders.id,orderOverview.splice(i, 1))">Ta bort!</button>
-          </li>
-        </ul>
-        <h2>total: {{totalSumToPay}}</h2>
-        <h2>antal ordrar: {{orders.length}} st</h2>
+        <div class="heading">
+          <h1 class="headingFont">Admin översikt!</h1>
+        </div>
+        <div class="table">
+          <table>
+            <tr>
+              <th>Order ID</th>
+              <th>Kund</th>
+              <th>Betalsätt </th>
+              <th>Summan</th>
+            </tr>
+            <tr *ngFor="let orders of orderOverview;let i =index" >
+              <td><b>{{orders.id}}</b></td>
+              <td>{{orders.createdBy}}</td>
+              <td>{{orders.paymentMethod}}</td>
+              <td>{{orders.totalPrice}} :-</td>
+              <td><button class="btn" (click)="removeOrder(orders.id,orderOverview.splice(i, 1))">Ta bort!</button></td>
+            </tr>
+            <tr>
+              <td><b>Total: </b></td>
+              <td>{{totalSumToPay}} :-</td>
+              <td><b>Antal ordrar:</b></td>
+              <td>{{orders.length}} st</td>
+            </tr>
+          </table>
+        </div>
       </article>
     </article>
   </main>
