--- a/src/app/components/basket/basket.component.scss
+++ b/src/app/components/basket/basket.component.scss
@@ -1,13 +1,23 @@
 .mainContainer {
   width: 400px;
   height: 900px;
-  background-color: red;
 }
 ul {
   list-style: none;
   li {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
   }
+}
+.btnBuy{
+  background:    #666666;
+border:        1px solid #556699;
+border-radius: 11px;
+box-shadow:    0 1px #444444;
+padding:       4px 32px;
+color:         #ffffff;
+display:       inline-block;
+font:          normal bold 19px/1 "Ubuntu", sans-serif;
+text-align:    center;
 }
 .cartContainer {
   position: absolute;
@@ -16,7 +26,7 @@ ul {
   z-index: 999;
   width: 300px;
   height: auto;
-  background-color: rgb(235, 233, 233);
+  background-color: rgb(196, 190, 190);
   border-left: 2px solid black;
   border-right: 2px solid black;
   border-bottom: 2px solid black;
