--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,7 +3,7 @@ nav {
   top: 0px;
   height: 7rem;
   width: 100%;
-  background-color: rgb(224, 0, 0);
+  background-color: #8998ac;
   ul {
     position: relative;
     list-style: none;
@@ -23,9 +23,21 @@ nav {
   .varukorg {
     position: absolute;
     right: 10px;
+    border-radius: 10%;
+    border: 1.5px solid black;
+    font-style: bold;
   }
   .svgImg {
     height: 24px;
     width: 24px;
   }
+}
+.logoContainer{
+  display: flex;
+  justify-content: center;
+}
+.logo{
+  position: relative;
+  height: 7.6rem;
+  bottom: 37px;
 }
