--- a/src/app/components/notfound/notfound.component.html
+++ b/src/app/components/notfound/notfound.component.html
@@ -1,1 +1,9 @@
-<p>notfound works!</p>
+<body>
+    <main class="main">
+        <article>
+            <button class="btn">
+                <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Klicka Här!</a>
+            </button>
+        </article>
+    </main>
+</body>
