--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,134 +1,79 @@
-<div class="inputContainer">
-  <form [formGroup]="searchForm">
-    <input
-    type="text"
-    class="input"
-    #serachtext
-    formControlName="searchText"
-    placeholder="Skriv in önskad film!"
-    />
-  </form>
-  <button [disabled]="!searchForm.valid" class="btnS" (click)="serachMovieByInput()">Sök!</button>
-</div>
-<div class="categoryContainer">
+<body>
+  <div class="inputContainer"> 
+      <form [formGroup]="searchForm" >
+        <input type="text"class="input" #serachtext formControlName="searchText" placeholder="Skriv in önskad film!" />
+        <button [disabled]="!searchForm.valid" class="btnS" (click)="serachMovieByInput()">Sök!</button>
+      </form>
+  </div>
+  <div class="categoryContainer">
 
-  <button (click)="filterCategory(btn.value)" #btn *ngFor="let category of allCategory" value={{category.id}}>
-    {{category.name}}
-  </button>
-  <button (click)="showAllMovies()">Alla</button>
-</div>
+      <button class="btnCategory" (click)="filterCategory(btn.value)" #btn *ngFor="let category of allCategory" value={{category.id}}>
+          {{category.name}}
+      </button>
+      <button class="btnCategory" (click)="showAllMovies()">Alla</button>
+  </div>
 
 <article class="containerforProductCotainer">
-  <article class="productsContainer" *ngIf="noMoviesContainer">
-
-      Fanns inga filmer med detta namn! Tryck här för att se <button (click)="showAllMovies()">Alla</button>
-  
-  </article>
+    <article class="noMovieContainer" *ngIf="noMoviesContainer">
+       <p class="noMovieText"> Fanns inga filmer med detta namn! Tryck här för att se <button class="btn" (click)="showAllMovies()">Alla</button></p>                                              
+    </article>
   <article class="productsContainer" *ngIf="prodContainerAll" >
+
     <div class="prodprodAll" *ngFor="let prod of products; let i = index">
-      <div id="{{ i }}">
-        <img
-          src="{{ prod.imageUrl }}"
-          class="imgContainer"
-          alt="Image on the movie: {{ prod.name }}"
-        />
+      <div>
+        <img src="{{ prod.imageUrl }}" class="imgContainer" alt="Image on the movie: {{ prod.name }}"/>
         <h3>{{ prod.name }}</h3>
-        <ul>
-          <li
-            id="{{ i }}"
-            class="descriptionContainer"
-            *ngIf="descriptionDisplay"
-          >
-            {{ prod.description }}
-          </li>
-          <li>Produkt id: {{ prod.id }}</li>
-          <li>{{ prod.price }} kr</li>
-          
-        </ul>
+
+          <ul>
+            <li>{{ prod.description }}</li>
+            <li>Produkt id: {{ prod.id }}</li>
+            <li>{{ prod.price }} kr</li>
+          </ul>
+
         <div>
-          <button
-            id="{{ i }}"
-            (click)="addItem(prod.id, prod.name, prod.price)"
-          >
+          <button class="btnBuy"(click)="addItem(prod.id, prod.name, prod.price)">
             Köp!
-          </button>
-          <button id="{{ i }}" (click)="toggleDisplay([i])">
-            Klicka för läs mer!
           </button>
         </div>
       </div>
     </div>
   </article>
+
   <article class="productsContainer" *ngIf="prodContainerfilter">
+
     <div class="prodprodAll" *ngFor="let prod of filteredList; let i = index">
       <div id="{{ i }}">
-        <img
-          src="{{ prod.imageUrl }}"
-          class="imgContainer"
-          alt="Image on the movie: {{ prod.name }}"
-        />
+        <img src="{{ prod.imageUrl }}"class="imgContainer" alt="Image on the movie: {{ prod.name }}"/>
         <h3>{{ prod.name }}</h3>
+
         <ul>
-          <li
-            id="{{ i }}"
-            class="descriptionContainer"
-            *ngIf="descriptionDisplay"
-          >
-            {{ prod.description }}
-          </li>
+          <li>{{ prod.description }}</li>
           <li>Produkt id: {{ prod.id }}</li>
           <li>{{ prod.price }} kr</li>
-          
         </ul>
+
+        <button class="btnBuy"(click)="addItem(prod.id, prod.name, prod.price)">Köp!</button>
+      </div>
+    </div>
+  </article>
+
+  <article class="productsContainer" *ngIf="prodContainerSerach">
+    <div *ngIf="resultFromSearch.length>0">
+      <div class="prodprodAll" *ngFor="let prod of resultFromSearch; let i = index">
         <div>
-          <button
-            id="{{ i }}"
-            (click)="addItem(prod.id, prod.name, prod.price)"
-          >
-            Köp!
-          </button>
-          <button id="{{ i }}" (click)="toggleDisplay([i])">
-            Klicka för läs mer!
-          </button>
+          <img src="{{ prod.imageUrl }}" class="imgContainer" alt="Image on the movie: {{ prod.name }}"/>
+            <h3>{{ prod.name }}</h3>
+
+            <ul>
+              <li>{{ prod.description }}</li>
+              <li>Produkt id: {{ prod.id }}</li>
+              <li>{{ prod.price }} kr</li> 
+            </ul>
+            
+          <button class="btnBuy"(click)="addItem(prod.id, prod.name, prod.price)">Köp!</button>
         </div>
       </div>
     </div>
   </article>
-  <article class="productsContainer" *ngIf="prodContainerSerach">
-    <div *ngIf="resultFromSearch.length>0">
-    <div class="prodprodAll" *ngFor="let prod of resultFromSearch; let i = index">
-      <div id="{{ i }}">
-        <img
-          src="{{ prod.imageUrl }}"
-          class="imgContainer"
-          alt="Image on the movie: {{ prod.name }}"
-        />
-        <h3>{{ prod.name }}</h3>
-        <ul>
-          <li
-            id="{{ i }}"
-            class="descriptionContainer"
-            *ngIf="descriptionDisplay"
-          >
-            {{ prod.description }}
-          </li>
-          <li>Produkt id: {{ prod.id }}</li>
-          <li>{{ prod.price }} kr</li>
-          
-        </ul>
-        <div>
-          <button
-            id="{{ i }}"
-            (click)="addItem(prod.id, prod.name, prod.price)"
-          >
-            Köp!
-          </button>
-          <button id="{{ i }}" (click)="toggleDisplay([i])">
-            Klicka för läs mer!
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
 </article>
-</article>
+</body>
